--- a/_posts/2020-09-23-venglisc.md
+++ b/_posts/2020-09-23-venglisc.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Venglish"
 date:   2020-09-23
-image: /assets/img/photo/La_polenta.jpeg
+image: /assets/img/photo/La_polenta.jpg
 tags:
   - fondamenti
 ---
