--- a/_posts/2020-09-23-venglisc.md
+++ b/_posts/2020-09-23-venglisc.md
@@ -2,9 +2,9 @@
 layout: post
 title:  "Venglish"
 date:   2020-09-23
-image: /assets/img/photo/La_polenta.jpg
+image: /assets/img/photo/Paolo_Monti_Piove_di_Sacco_1967.jpg
 tags:
-  - fondamenti
+  - teoria
 ---
 
 Qua da noialtri gavemo desmentegà che prima de tute 'ste paroe nove in *inglisc* i campi e i capanoni i xé 'ndai vanti sensa tante ciacoe, co ea fadiga: poca teoria e tante bestemie.
@@ -15,6 +15,6 @@ Quando che 'ndemo fora de casa, sui campi, nei capanoni. Prima col versor e dopo
 
 *Parla come che ti magni* diseva nostro pare quando che tornavimo da scuoea. *Magna e tasi* gera ea frase dopo. Tirar fora da tuti 'sti discorsi sull'innovasion e robe che ne serve capir, par no farse ciavar i schei e il tempo. Che no i xé mai bastansa.
 
-Ea foto xé ciapada da [qua](https://commons.wikimedia.org/wiki/File:Ca%27_Rezzonico_-_La_Polenta_-_Pietro_Longhi.jpg)
+Ea foto xé ciapada da [qua](https://commons.wikimedia.org/wiki/File:Paolo_Monti_-_Servizio_fotografico_(Piove_di_Sacco,_1967)_-_BEIC_6366055.jpg)
 
 [Grezi come el paltan, ma coi cai sue man](https://youtu.be/0ILHKwfMXKY).
