new post and fix

--- a/_posts/2020-10-09-Vajont.md
+++ b/_posts/2020-10-09-Vajont.md
@@ -15,7 +15,7 @@ Aldeà dea storia che xé ben elencada sua vose de [Wikipedia](https://it.wikipe
 El progeto del "Grande Vajont" partiva dal '29 col scopo de aver energia diversa da quea che vien dal carbon. Quindi i pensava de sfrutar quea dell'acqua. Ma se ti frachi l'acqua in una vae visin a un monte che se ciama Toc, che [vol dir](https://it.wikipedia.org/wiki/Monte_Toc#Origine_del_toponimo) *Toco*, "pezzo" o in furlan *Patoc*, "marcio, fradicio", no xé difisile che se rompa i cojoni el vien zò. Ma fintanto che i se desbrasolava coe paroe dite e scrite, ea Tina Merlin ea [scriveva](http://temi.repubblica.it/corrierealpi-diga-del-vajont-1963-2013-il-cinquantenario/unenorme-massa-di-50-milioni-di-metri-cubi-minaccia-la-vita-e-gli-averi-degli-abitanti-di-erto/) nel 20 febraio 1961 *Un'enorme massa di 50 milioni di metri cubi minaccia la vita e gli averi degli abitanti di Erto*. Do ani prima. E al 4 novembre del '60 ghe gera stada na frana. El 9 otobre de 57 ani fa ghe xé cascà in testa no soltanto sassi, tera e acqua, ma anca l'anda de quei che saveva e no ga voesto meter drio i interessi rispeto a ea realtà.
 
 ### Bisogna saver e saver spiegar
-Ea storia xé sempre ea stessa: ghe xé quei che ga pratica coa sciensa e i sà che xé un vanti e indrio de ipotesi, verifiche, test e anaisi. Ea sciensa no gà verità, gà teorie e modei che funsiona fin prova contraria. Dirghe a un sciensiato "*cossa ghe xé de certo*", iù te rispondarà, se el xé serio, "*mi no lavoro coa certessa, ma con probabiità e possibiità*". Quindi ai esperti xé da dir, **sempre**, "*no gò capio, spiega mejo*" e su queo che te dixe ti ti gà da sceglier qual riscio xé più vantagioso.
+Ea storia xé sempre ea stessa: ghe xé quei che ga pratica coa sciensa e i sà che xé un vanti e indrio de ipotesi, verifiche, test e anaisi. Ea sciensa no gà verità, gà teorie e modei che funsiona fin prova contraria. Dirghe a un sciensiato "*cossa ghe xé de certo*", lu te rispondarà, se el xé serio, "*mi no lavoro coa certessa, ma con probabiità e possibiità*". Quindi ai esperti xé da dir, **sempre**, "*no gò capio, spiega mejo*" e su queo che te dixe ti ti gà da sceglier qual riscio xé più vantagioso.
 
 ### Costi de far e quei de no far
 In termini de **efficiensa** e **efficacia**. Nel caso del Vajont, meter in conto i costi de risparmio sul comprar carbon, e quei par rimeter a posto i danni, doveva esser messi sua stajera. Ma xé sempre ea stessa storia: quando che i te dixe "*varda che presto o tardi ti dovarà farte un sistema de gestion digital fato ben*" e ti ti pensi che ti xé ndà vanti ben fin desso, dopo no ti pol sbraitar chel coronavirus te bloca i dipendenti a casa a no far un casso. Se queste xé putanae rispetto al Vajont, ea base xé quea comunque. Spetar, sperar. E dopo pianzer. I costi de far e quei de no far xé **sempre** ligai a **cossa di fa**. Prima de far na roba granda, va sempre par gradi che xé el metodo che i gà usà par far aziende come Google, Amazon, Facebook e compagnia cantante.
